--- a/apps/templates/layouts/base-landing-nikos.html
+++ b/apps/templates/layouts/base-landing-nikos.html
@@ -76,7 +76,7 @@
 <body>
 	<div class="w3-top">
 		<div class="w3-bar w3-white w3-card" id="myNavbar">
-		<a href="#home" class="w3-bar-item w3-wide"><img class="logo" src="/static/assets/landing/images/logo.png"></a>
+		<a href="#home" class="w3-bar-item w3-wide"><img class="logo" src="/static/assets/landing/images/logo.jpg" style="width: 12em;"></a>
 			<div class="w3-right w3-hide-small">
 				<a href="{% url 'login' %}" data-toggle="modal" data-target="#loginModal" class="w3-bar-item w3-button"><i
 						class="fa fa-user"></i> LOGIN</a>
