--- a/apps/templates/includes/profile/chartsprofile.html
+++ b/apps/templates/includes/profile/chartsprofile.html
@@ -128,9 +128,9 @@
       <div class="card resizable-content">
         <div class="card-body ">
           <div class="input-group no-border hide" id="profile-edit-12">
-            <button class="btn btn-primary" id="drawChart-twel-apply"><i class="material-icons">draw</i> Draw</button>
+            <button class="btn btn-primary" id="drawChart-twelve-apply"><i class="material-icons">draw</i> Draw</button>
           </div>
-          <div id="drawChart-twel" style="width:100%; height: 90%;"></div>
+          <div id="drawChart-twelve" style="width:100%; height: 90%;"></div>
         </div>
       </div>
     </div>
