--- a/apps/templates/pages/profile/details.html
+++ b/apps/templates/pages/profile/details.html
@@ -16,10 +16,12 @@
 {% block content %}
 
 <div id="content">
-{% include 'includes/projectmap.html' %}
-{% include 'includes/projectfilter.html' %}
-{% include 'includes/chartsprofile.html' %}
-{% include 'includes/profileform.html' %}
+
+{% include 'includes/project/projectmap.html' %}
+{% include 'includes/project/projectfilter.html' %}
+{% include 'includes/profile/chartsprofile.html' %}
+{% include 'includes/profile/profileform.html' %}
+
 </div>
 {% endblock content %}
 
@@ -63,6 +65,12 @@
   var modal = document.getElementById("myModal");
   var btn = document.getElementById("myBtn");
   var span = document.getElementsByClassName("close")[0];
+
+  var defaultmodal = document.getElementById("defaultprofileModal");
+  var btndefault = document.getElementById("defaultprofile");
+  var spandefault = document.getElementById("close-default-modal");
+
+
   var chartdict = chartjson;
   function profile_edit(){
     for (i = 0; i < chartlist.length; i++) {
@@ -74,7 +82,6 @@
     $('#myBtn').removeClass('hide');
   }
 
-  
 </script>
 <script src="/static/custom/js/projectprofile.js"></script>
 <script src="/static/custom/js/project.js"></script>
