--- a/apps/templates/pages/project/delete.html
+++ b/apps/templates/pages/project/delete.html
@@ -26,11 +26,11 @@
                         </div>
                     </div>
                     <div class="card-body ">
-                        {% for message in messages %}
+                        <!-- {% for message in messages %}
                         <div class="alert messages {{ messsage.tags }} control-label col-lg-12">
                             <p class="{{ message.tags }}">{{ message }}</p>
                         </div>
-                        {% endfor %}
+                        {% endfor %} -->
 
                         {% for error in form.non_field_errors %}
                         <div class="form-group has-error">{{ error }}</div>
