--- a/apps/templates/pages/profile/default/index.html
+++ b/apps/templates/pages/profile/default/index.html
@@ -30,7 +30,7 @@
               </td>
               <td class="td-actions text-center">
                 <button type="button" rel="tooltip" class="btn" data-original-title="" title=""
-                  onclick='window.location.href="{% url 'delete-defaultprofilescategory' cat.id %}"'>
+                  onclick='window.location.href="{% url 'edit-defaultprofilescategory' cat.id %}"'>
                   <i class="material-icons">edit</i>
                 </button>
                 <button type="button" rel="tooltip" class="btn" data-original-title="" title=""
@@ -70,7 +70,7 @@
               </td>
               <td class="td-actions text-center">
                 <button type="button" rel="tooltip" class="btn" data-original-title="" title=""
-                  onclick='window.location.href="{% url 'delete-defaultprofiles' default.id %}"'>
+                  onclick='window.location.href="{% url 'edit-defaultprofiles' default.id %}"'>
                   <i class="material-icons">edit</i>
                 </button>
                 <button type="button" rel="tooltip" class="btn" data-original-title="" title=""
