--- a/apps/templates/pages/profile/details.html
+++ b/apps/templates/pages/profile/details.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="/static/assets/css/leaflet/easy-button.css" />
 <link rel='stylesheet' href='/static/assets/css/leaflet/leaflet.fullscreen.css' />
 <link rel="stylesheet" href="/static/assets/css/leaflet/L.Control.Locate.min.css" />
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="/static/custom/css/style.css" />
 {% endblock stylesheets %}
 
