--- a/apps/templates/pages/profile/index.html
+++ b/apps/templates/pages/profile/index.html
@@ -7,6 +7,7 @@
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 <link  href="https://cdn.datatables.net/1.13.2/css/jquery.dataTables.min.css">
+<link rel="stylesheet" href="/static/custom/css/style.css" />
 {% endblock stylesheets %}
 
 {% block content %}
