datatable to the project details

--- a/apps/templates/includes/project/projectmap.html
+++ b/apps/templates/includes/project/projectmap.html
@@ -10,7 +10,7 @@
     <div class="col-md-6">
       <div class="card ">
         <div class="table-responsive" style="min-height:15vh;  max-height: 18vh;">
-          <table class="table">
+          <table class="table" id="table_ags">
             <thead>
               <tr>
                 <th class="text-center">#</th>
@@ -49,7 +49,7 @@
       <div class="card">
         <div class="card-body">
           <div class="table-responsive" style="min-height:35vh;  max-height: 37vh;">
-            <table class="table table-striped">
+            <table class="table table-striped" id="table_borehole">
               <thead>
                 <tr>
                   <th class="text-center">#</th>
