--- a/apps/templates/pages/profile/details.html
+++ b/apps/templates/pages/profile/details.html
@@ -10,6 +10,7 @@
 <link rel='stylesheet' href='/static/assets/css/leaflet/leaflet.fullscreen.css' />
 <link rel="stylesheet" href="/static/assets/css/leaflet/L.Control.Locate.min.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
+<link  href="https://cdn.datatables.net/1.13.2/css/jquery.dataTables.min.css">
 <link rel="stylesheet" href="/static/custom/css/style.css" />
 {% endblock stylesheets %}
 
@@ -86,6 +87,12 @@
 <script src="/static/custom/js/projectprofile.js"></script>
 <script src="/static/custom/js/project.js"></script>
 <script src="/static/custom/js/map.js"></script>
+
+<script src="https://cdn.datatables.net/1.13.2/js/jquery.dataTables.js"></script>
+<script type="text/javascript">
+    $('#table_borehole').DataTable();
+    $('#table_ags').DataTable();
+</script>
 
 {% endblock javascripts %}
 
