--- a/apps/templates/pages/tool/details.html
+++ b/apps/templates/pages/tool/details.html
@@ -7,7 +7,7 @@
   <div class="col-md-6">
     <div class="card ">
       <div class="card-header ">
-        <h4 class="card-title">Tool-2</h4>
+        <h4 class="card-title">Bearing Capacity Calculator</h4>
       </div>
       <div class="card-body ">
         <div class="row">
@@ -25,8 +25,8 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="" role="tablist">
-                  <i class="material-icons">timeline</i> Run
+                <a class="nav-link"  href= "{% url 'bearingCapacity' %}" role="tablist">
+                  <i class="material-icons">timeline</i> Activate
                 </a>
               </li>
             </ul>
@@ -60,7 +60,7 @@
   <div class="col-md-6">
     <div class="card ">
       <div class="card-header ">
-        <h4 class="card-title">Tool-1</h4>
+        <h4 class="card-title">N-SPT Correction</h4>
       </div>
       <div class="card-body ">
         <div class="row">
@@ -68,37 +68,36 @@
 
             <ul class="nav nav-pills nav-pills-rose nav-pills-icons flex-column" role="tablist">
               <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#link110" role="tablist">
+                <a class="nav-link active" data-toggle="tab" href="#link20" role="tablist">
                   <i class="material-icons">dashboard</i> About
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#link111" role="tablist">
+                <a class="nav-link" data-toggle="tab" href="#link21" role="tablist">
                   <i class="material-icons">schedule</i> Results
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="" role="tablist">
-                  <i class="material-icons">widgets</i> Run
+                <a class="nav-link" href="{% url 'NSPT' %}" role="tablist">
+                  <i class="material-icons">widgets</i> Activate
                 </a>
               </li>
             </ul>
           </div>
           <div class="col-md-8">
             <div class="tab-content">
-              <div class="tab-pane active" id="link110">
-                Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C
-                users after installed base benefits.
-                <br>
-                <br> Dramatically visualize customer directed convergence without revolutionary ROI. Collaboratively
-                administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after
-                installed base benefits.
-                <br>
-                <br> Dramatically visualize customer directed convergence without revolutionary ROI. Collaboratively
-                administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after
-                installed base benefits.
+              <div class="tab-pane active" id="link20">
+                N-SPT values observed during testing are not utilized directly in the assessment
+                 of soil properties. These values need to be corrected to account for hammer efficiency
+                 , borehole diameter,sampling method, rod length and the overburden pressure.
+                 <br>
+                 <br>
+                Current tool sets the rules to allow the calculations for the correct SPT numbers,
+                N60 and (N1)60. You can activate the tool and then go back to project page to plot
+                corrected SPT numbers with depth. 
+
               </div>
-              <div class="tab-pane" id="link111">
+              <div class="tab-pane" id="link21">
                 Efficiently unleash cross-media information without cross-media value. Quickly maximize timely
                 deliverables for real-time schemas.
                 <br>
@@ -115,7 +114,7 @@
   <div class="col-md-6">
     <div class="card ">
       <div class="card-header ">
-        <h4 class="card-title">Tool-3</h4>
+        <h4 class="card-title">Relative Density Tool</h4>
       </div>
       <div class="card-body ">
         <div class="row">
@@ -123,37 +122,39 @@
 
             <ul class="nav nav-pills nav-pills-rose nav-pills-icons flex-column" role="tablist">
               <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#link110" role="tablist">
+                <a class="nav-link active" data-toggle="tab" href="#link30" role="tablist">
                   <i class="material-icons">dashboard</i> About
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#link111" role="tablist">
+                <a class="nav-link" data-toggle="tab" href="#link31" role="tablist">
                   <i class="material-icons">schedule</i> Results
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="" role="tablist">
-                  <i class="material-icons">timeline</i> Run
+                <a class="nav-link"  href="{% url 'RelativeDensity' %}" role="tablist">
+                  <i class="material-icons">timeline</i> Acrivate
                 </a>
               </li>
             </ul>
           </div>
           <div class="col-md-8">
             <div class="tab-content">
-              <div class="tab-pane active" id="link110">
-                Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C
-                users after installed base benefits.
-                <br>
-                <br> Dramatically visualize customer directed convergence without revolutionary ROI. Collaboratively
-                administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after
-                installed base benefits.
-                <br>
-                <br> Dramatically visualize customer directed convergence without revolutionary ROI. Collaboratively
-                administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after
-                installed base benefits.
+              <div class="tab-pane active" id="link30">
+                One of the most important soil aggregate property is relative density.<br>
+                The relative density of soil is used to describe the state of compactness of 
+                granular material and generally qualitatively described as very loose, loose, 
+                medium dense, dense and very dense. It is defined as the ratio of difference of 
+                void ratios in its loosest and densest state:<br>
+                Dr = (e<sub>max</sub> – e<sub>current</sub>)/(e<sub>max</sub> –e<sub>min</sub>).
+                <br><br>
+
+                Current tool sets the rules to calculate relative density based on N SPT number. 
+                You can activate the tool and then go back to project page to plot relative density
+                per borehole with depth. 
+
               </div>
-              <div class="tab-pane" id="link111">
+              <div class="tab-pane" id="link31">
                 Efficiently unleash cross-media information without cross-media value. Quickly maximize timely
                 deliverables for real-time schemas.
                 <br>
