--- a/apps/templates/pages/tool/RelativeDensity.html
+++ b/apps/templates/pages/tool/RelativeDensity.html
@@ -39,11 +39,12 @@
             </ul>
             <div class="tab-content tab-space tab-subcategories">
                 <div class="tab-pane" id="link7">
-                    {% include 'pages/tool/includes/NSPTDetails.html' %}
+                    {% include 'pages/tool/includes/RelativeDensityDetails.html' %}
                 </div>
                 <div class="tab-pane active" id="link8">
                     <div class="card">
                         <div class="card-body">
+    
                             <form id="TypeValidation" class="form-horizontal" method="post"
                                 enctype="multipart/form-data">
                                 {% csrf_token %}
@@ -56,6 +57,17 @@
                                             </div>
                                             <div class="col-md-8">
                                                 <div class="form-group has-default bmd-form-group">
+                                                    {% for message in messages %}
+                                                    <div class="alert alert-rose">
+                                                        <button type="button" class="close" data-dismiss="alert"
+                                                            aria-label="Close">
+                                                            <i class="material-icons">close</i>
+                                                        </button>
+                                                        <span>
+                                                            <b> info - </b> {{ message }}
+                                                        </span>
+                                                    </div>
+                                                    {% endfor %}
                                                     <select style="width: 300px; text-align:center;"
                                                         id="select-variable-first" name="select-variable-first"
                                                         onchange="getAgs(this)">
@@ -77,7 +89,7 @@
                                             <div class="col-md-8">
                                                 <div class="form-group has-default bmd-form-group">
                                                     <select style="width: 300px; text-align:center;"
-                                                        id="select-variable-second" name="select-variable-second"
+                                                        id="activate" name="select-variable-second"
                                                         required multiple>
                                                     </select>
                                                 </div>
@@ -86,89 +98,60 @@
                                         <div class="row ">
                                             <div class="col-md-4 card-header text-center">
                                                 <h5 class="card-title">
-                                                    Import Hammers’ efficiencies
-                                                </h5>
-                                            </div>
-                                            <div class="col-md-8">
-                                                {% for message in messages %}
-                                                <div class="alert alert-rose">
-                                                    <button type="button" class="close" data-dismiss="alert"
-                                                        aria-label="Close">
-                                                        <i class="material-icons">close</i>
-                                                    </button>
-                                                    <span>
-                                                        <b> info - </b> {{ message }}</span>
-                                                </div>
-                                                {% endfor %}
-                                                {% for error in form.non_field_errors %}
-                                                <div class="form-group has-error">{{ error }}</div>
-                                                {% endfor %}
-                                                {% for field in form %}
-                                                {% for error in field.errors %}
-                                                <div class="alert alert-danger col-12" role="alert">{{
-                                                    error
-                                                    }}
-                                                </div>
-                                                {% endfor %}
-
-                                                <div class="form-group bmd-form-group">
-                                                    {{ field }}
-                                                </div>
-                                                {% endfor %}
-                                            </div>
-                                        </div>
-                                        <div class="row ">
-                                            <div class="col-md-4 card-header text-center">
-                                                <h5 class="card-title">
-                                                    Select Sampling Method (define CS)
+                                                    Select Method :
                                                 </h5>
                                             </div>
                                             <div class="col-md-8">
                                                 <div class="form-group has-default bmd-form-group">
-                                                    <select style="width: 300px; text-align:center;" id="CS" name="CS"
-                                                        required>
-                                                        <option value=1.2>Sampler without liner </option>
-                                                        <option value=1.00>Standard Sampler</option>
-                                                        <option value=0.9>With liner for loose sand</option>
-                                                        <option value=0.8>With liner for dense sand and clay
-                                                        </option>
+                                                    <select style="width: 300px; text-align:center;" id="method" name="method">
+                                                        <option value="Terzaghi">Terzaghi and Peck </option>
+                                                        <option value="Skempton">Skempton </option>
+                                                        <option value="Both">Both </option>
+
                                                     </select>
                                                 </div>
                                             </div>
-
                                         </div>
 
+                                        
+                                        <br>
+                                        <div class="row tool-form">
+                                            <button class="btn btn-rose" type="reset">Reset</button>
+                                            <button class="btn btn-rose" type="submit" name="activate" value="activate"
+                                                style="margin-left:1% ;" onclick="fun_1()">Activate</button>
+                                        </div>
                                         <div class="row ">
-                                            <div class="col-md-4 card-header text-center">
-                                                <h5 class="card-title">
-                                                    Select Method for estimating overburden correction factor CN
-                                                </h5>
-                                            </div>
-                                            <div class="col-md-8">
+                                            
+                                            <div class="col-md-12">
                                                 <div class="form-group has-default bmd-form-group">
-                                                    <select style="width: 300px; text-align:center;" id="CN" name="CN"
-                                                        required>
-                                                        <option value="Liao">Liao & Whitman (1986) </option>
-                                                        <option value="Seed">Seed (1976)</option>
-                                                        <option value="Peck">Peck, Hanson and Thornburn (1974)
-                                                        </option>
-                                                        <option value="Skempton">Skempton (1986)</option>
-                                                    </select>
+                                                    <table border ="2px" class= "table table-hover table-sm text-center" id="table">
+                                                        <thead>
+                                                            <tr>
+                                                                <th rowspan="2">Method</th>
+                                                                <th>N SPT Value</th>
+                                                                <th style="width=200px">Relative Density of Sand/Silty Sand</th>
+                                                                <th rowspan="2">Classification</th>
+                                                            </tr>
+                                                            <tr>
+                                                                <th>N</th>
+                                                                <th>D<sub>r</sub>(%)</th>
+                                                            </tr>
+                                                        </thead>
+        
+                                                    </table>
+                                                    <button class="btn btn-rose" type="button" style="position : absolute; right:0px;"
+                                                    onclick="myFunction()">+</button>
                                                 </div>
                                             </div>
                                         </div>
                                         <br>
                                         <div class="row tool-form">
-                                            <button class="btn btn-rose" type="reset">Reset</button>
-                                            <button class="btn btn-rose" type="submit"
-                                                style="margin-left:1% ;">Activate</button>
+                                            <button class="btn btn-rose" type="button" onclick="Calculate()" >Calculate</button>
                                         </div>
+                                        
                                     </div>
                                     <div class="col-md-5">
                                         <div class="card-header">
-                                            <a href="#">
-                                                <img class="img" src="{% static "assets/img/Picture1.png" %}">
-                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -183,23 +166,16 @@
                             <h5 class="card-title">Reference</h5>
                         </div>
                         <div class="card-body">
+                            
                             <ol>
-                                <li>Geotechnical investigation and testing – Field testing – Part 3: Standard
-                                    penetration test (ISO 22476-3:2005).</li>
-                                <li>ASTM D 1586-99 Standard Test Method for Penetration Test and Split-Barrel Sampling
-                                    of Soils.</li>
-                                <li>Kovacs, W. D. Salomone, L. A., and Yokal, F. Y., “Comparison of Energy Measurements
-                                    in the Standard Penetration Test Using the Cathead and Rope Method,” National Bureau
-                                    of Standards Report to the US Nuclear Regulatory Commision, 1983.</li>
-                                <li>Schmertman, J. H., “Use the SPT to Measure Dynamic Soil Properties ?-Yes, But..!”,
-                                    Dynamic Geotechnical Testing, ASTM STP 654, American Society for Testing and
-                                    Materials, 1978.</li>
-                                <li>Seed, H. B., Tokimastu, K., Harder, L. F. and Chung, R. F., “Influence of SPT
-                                    Procedures in Soil Liquefaction Resistance Evaluations,” Journal of Geotechnical
-                                    Engineering, Vol. 111, No. 12, December 1985.</li>
-                                <li>Skempton, A. W., “Standard Penetration Test Procedures and the Effects in Sands of
-                                    Overburden Pressure, Relative Density, Particle Size, Ageing and Over
-                                    Consolidation”, Geotechnique 36: 3, September, 1986.</li>
+                                
+                                <li>Terzaghi, K. and Peck, R.B. (1967) Soil Mechanics in Engineering Practice. 
+                                    John Wiley & Sons, New York.</li>
+                                <li>T. W. Lambe and R. V. Whitman, 1969, Soil Mechanics. John Wiley & Sons, 
+                                    New York.</li>
+                                <li>Skempton, A. W., 1986, Standard Penetration Test Procedures and the Effects 
+                                    in Sands of Overburden Pressure, Relative Density, Particle Size, Ageing and 
+                                    Over Consolidation, Geotechnique 36: 3.</li>
                             </ol>
                         </div>
                     </div>
@@ -227,7 +203,7 @@
 <!-- MathJax version 3 snippet -->
 <script>
     function getAgs(element) {
-        $('#select-variable-second').empty()
+        $('[name=select-variable-second]').empty()
         get_borhole_list(element.value)
     };
     function get_borhole_list(value) {
@@ -235,14 +211,90 @@
         var dataRequest = { project_id: project_id };
         $.get('agsfiles', dataRequest).done(function (data) {
             for (i = 0; i < data.agsfiles.length; i++) {
-                $('#select-variable-second').append($('<option>', { value: data.agsfiles[i][0], text: data.agsfiles[i][1] }));
+                $('[name=select-variable-second]').append($('<option>', { value: data.agsfiles[i][0], text: data.agsfiles[i][1] }));
             }
         });
     };
 
 </script>
+<script>
+    function fun_1() {
+        document.getElementById("calculate").removeAttribute('required');}
+    function fun_2() {
+            document.getElementById("activate").removeAttribute('required');}
+</script> 
+<script>
+    var y;
+    var classification;
+    function get_dr_Terzaghi(x){
+    if (x <= 4 && x >0){
+        y = 15 * x / 4;
+        classification = "Very Loose";}
+    else if (x <= 10 && x >4){
+        y = 15 + 20 * (x-4) / 6;
+        classification = "Loose";}
+    else if (x <= 30 && x >10){
+        y = 35 + 30 * (x-10) / 20;
+        classification = "Medium";}
+    else if (x <= 50 && x >30){
+        y = 65 + 20 * (x-30) / 20;
+        classification = "Dense";}
+    else if (x <= 100 && x >50){
+        y = 85 + 15 * (x-50) / 50;
+        classification = "Very Dense";}
+    else{
+        y = "wrong entry"
+        classification = "wrong entry"
+        }
+    return [y,classification];
+    }
+    function get_dr_Skempton(x){
+        if (x <= 100 && x >0){
+            classification = get_dr_Terzaghi(x)[1];
+            y = 100*(x/60)**0.5;}
+        else{
+            y = "wrong entry"
+            classification = "wrong entry"
+            }
+        return [y,classification];}
 
 
-
-
+    function myFunction() {
+            var table = document.getElementById("table");
+            var row = table.insertRow(-1);
+            var cell1 = row.insertCell(0);
+            var cell2 = row.insertCell(1);
+            var cell3 = row.insertCell(2);
+            var cell4 = row.insertCell(3);
+            cell1.innerHTML = '<select style=" text-align:center;" id="method_2" name="method_2">\
+                <option value="Terzaghi">Terzaghi and Peck </option>\
+                <option value="Skempton">Skempton </option></select>';
+            cell2.innerHTML = '<input  type="number" id="calculate" name="NSPT" min="1" max ="100" step="1">';
+            cell3.innerHTML = '<p  name="dr" >';
+            cell4.innerHTML = '<p name="classification" >';
+          }
+    function Calculate() {
+            var table = document.getElementById('table');
+            var methods = table.getElementsByTagName('select');
+            var items = table.getElementsByTagName('input');
+            var output_dr = document.getElementsByName('dr');
+            var output_class = document.getElementsByName('classification');
+            for(var i=0; i<items.length; i++){
+                if(methods[i].value == "Terzaghi"){
+                    result = get_dr_Terzaghi(items[i].value);
+                    y = result[0];
+                    if (typeof y == "number"){y=y.toFixed(2);}
+                    output_dr[i].innerHTML = y;
+                    output_class[i].innerHTML = result[1];
+                }
+                else{
+                    result = get_dr_Skempton(items[i].value);
+                    y = result[0];
+                    if (typeof y == "number"){y=y.toFixed(2);}
+                    output_dr[i].innerHTML = y;
+                    output_class[i].innerHTML = result[1];
+                }
+                }
+        }
+</script> 
 {% endblock javascripts %}
