--- a/apps/templates/pages/profile/index.html
+++ b/apps/templates/pages/profile/index.html
@@ -21,6 +21,7 @@
             <tr>
               <th class="text-center">#</th>
               <th class="text-center">Project Name</th>
+              <th class="text-center">Type</th>
               <th class="text-center">Profile Name</th>
               <th class="text-center">Actions</th>
             </tr>
@@ -30,6 +31,7 @@
             <tr>
               <td class="text-center">{{ forloop.counter }} </td>
               <td class="text-center">{{ profile.project.name }}</td>
+              <td class="text-center">{{ profile.type }}</td>
               <td class="text-center">{{ profile.name }}</td>
               </td>
               <td class="td-actions text-center">
