--- a/apps/static/assets/css/material-dashboard.css
+++ b/apps/static/assets/css/material-dashboard.css
@@ -2621,6 +2621,7 @@ tbody.collapse.show {
   display: flex;
   flex-wrap: wrap;
   align-items: stretch;
+  margin-left: 1%;
   width: 100%; }
   .input-group > .form-control,
   .input-group > .custom-select,
