--- a/apps/templates/pages/profile/delete.html
+++ b/apps/templates/pages/profile/delete.html
@@ -52,7 +52,7 @@
 
                     </div>
                     <div class="card-footer ml-auto mr-auto">
-                        <h4 class="card-title">Are you sure? Do you want to delete?</h4>
+                        <h4 class="card-title">Are you sure? Do you want to delete {{ name }} from project {{ project}} ?</h4>
                     </div>
                     <div class="card-footer ml-auto mr-auto">
                         <button type="submit" class="btn btn-rose" style="margin-right:5px;">Delete</button>
