--- a/apps/templates/pages/project/delete.html
+++ b/apps/templates/pages/project/delete.html
@@ -52,7 +52,7 @@
 
                     </div>
                     <div class="card-footer ml-auto mr-auto">
-                        <h4 class="card-title">Are you sure? Do you want to delete?</h4>
+                        <h4 class="card-title">Are you sure? Do you want to delete the {{ name }}  {% if '/project/ags/delete/' in request.path %} from  projec {{ project }}{% endif %}?</h4>
                     </div>
                     <div class="card-footer ml-auto mr-auto">
                         <button type="submit" class="btn btn-rose" style="margin-right:5px;">Delete</button>
