--- a/apps/templates/pages/tool/includes/RelativeDensityDetails.html
+++ b/apps/templates/pages/tool/includes/RelativeDensityDetails.html
@@ -11,7 +11,7 @@
     </div>
     <div class="card-body">
         <div class="row">
-            <div class="col-md-7 ml-auto mr-auto">
+            <div class="col-md-12 ml-auto mr-auto">
                 <p>One of the most important soil aggregate property is relative density.<br> 
                     The relative density of soil is used to describe the state of compactness of granular 
                     material and generally qualitatively described as very loose, loose, medium dense, dense 
@@ -27,7 +27,7 @@
                     Current tool interpolates for intermediate values of Dr (%). <br> 
                 </p>
                 <div>
-                    <table border ="2px" class= "table table-hover table-sm text-center">
+                    <table class= "table table-hover table-sm text-center">
                         <thead>
                             <tr>
                                 <th>N value<br>(blows/ft or 305 mm)</th>
