--- a/apps/templates/pages/tool/RelativeDensity.html
+++ b/apps/templates/pages/tool/RelativeDensity.html
@@ -44,12 +44,15 @@
                 <div class="tab-pane active" id="link8">
                     <div class="card">
                         <div class="card-body">
-    
                             <form id="TypeValidation" class="form-horizontal" method="post"
                                 enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="row tool-form">
-                                    <div class="col-md-7">
+                                    <div class="col-md-2">
+                                        <div class="card-header">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-8">
                                         <div class="row ">
                                             <div class="col-md-4 card-header text-center">
                                                 <h5 class="card-title">
@@ -150,7 +153,7 @@
                                         </div>
                                         
                                     </div>
-                                    <div class="col-md-5">
+                                    <div class="col-md-2">
                                         <div class="card-header">
                                         </div>
                                     </div>
